fix(types+cc): CC refactoring and pyright fixes across 27 files
- Reduced cyclomatic complexity in F-grade functions across api, compiler, cypher, executor, transpiler modules
- Fixed pyright: type: ignore → pyright: ignore for reportPrivateImportUsage
- Fixed asyncpg.Pool | None with assert post-init pattern
- Fixed ReturnType, ArgumentType, and OptionalMemberAccess errors throughout

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>